...
        <scene sceneID="6Rn-wk-uL4">
            <objects>
                <viewController storyboardIdentifier="UserPhoneViewController" title="User Phone View Controller" id="oZw-pd-5Hd" customClass="UserPhoneViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="fyC-zN-c9e">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
...
                                <rect key="frame" x="53" y="281.5" width="275" height="40"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.24576364436619719" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" hint="Phone Number" identifier="phoneNumber" label="Phone Number"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="HSA-Ip-bdh"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wB2-hO-Qju">
                                <rect key="frame" x="53" y="329.5" width="275" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="nextButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="qG4-IN-4eN"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Next">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="50" y="50" width="275" height="120"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.25420884683098594" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="hobbiesField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="275" id="lf5-zh-xiF"/>
...
                                <rect key="frame" x="50" y="178" width="275" height="120"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.24510343309859156" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="interestsField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="275" id="mSd-cf-Tar"/>
...
                                <rect key="frame" x="50" y="178" width="275" height="120"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.24862455985915494" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="objectivesField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="120" id="FUV-Ct-0sw"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FVP-Ws-aK2">
                                <rect key="frame" x="50" y="306" width="275" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="finishButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="AkL-oV-GyO"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Finish">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="50" y="130" width="275" height="40"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.24840448943661972" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="denomField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Pzv-AP-xjX"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KWY-QM-1L7">
                                <rect key="frame" x="49" y="328" width="277" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="continueButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="mv9-6u-S5h"/>
                                </constraints>
                                <state key="normal" title="Continue">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                            </imageView>
                            <textField contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="74a-Ag-4pX">
                                <rect key="frame" x="89" y="280" width="237" height="40"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.24953235035211269" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="emailField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="auy-Au-PR7"/>
...
                                <rect key="frame" x="41" y="281.5" width="275" height="40"/>
                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.25022007042253519" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="nameField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="8C8-ks-Yf1"/>
...
                        <viewLayoutGuide key="safeArea" id="kUw-2p-cWc"/>
                    </view>
