...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Goals-->
        <scene sceneID="vpW-3E-61M">
            <objects>
                <tableViewController storyboardIdentifier="GoalsList" title="Goals" id="8Lj-K3-l3W" customClass="GoalsTableViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" separatorInsetReference="fromAutomaticInsets" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qUn-sO-VtW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <navigationBar contentMode="scaleToFill" barStyle="black" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ic9-ph-6TB">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                <color key="barTintColor" white="0.059999999999999998" alpha="1" colorSpace="calibratedWhite"/>
                                <items>
                                    <navigationItem title="Add Goal" id="mok-zZ-jy1">
                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="86q-Fs-GDW">
                                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
                                                <action selector="cancelButton:" destination="1J1-Dq-eMN" id="Lk3-mO-b8B"/>
                                            </connections>
                                        </barButtonItem>
                                        <barButtonItem key="rightBarButtonItem" title="Done" style="done" id="kqt-cj-kuO">
                                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <connections>
                                                <action selector="doneButton:" destination="1J1-Dq-eMN" id="OdI-gF-DSL"/>
                                            </connections>
                                        </barButtonItem>
                                    </navigationItem>
...
            </objects>
            <point key="canvasLocation" x="8760.7999999999993" y="-725.48725637181417"/>
        </scene>
        <!--History-->
        <scene sceneID="Q3t-a0-G6i">
            <objects>
                <viewController storyboardIdentifier="History" title="History" automaticallyAdjustsScrollViewInsets="NO" id="FsJ-b5-pRQ" customClass="HistoryViewController" customModule="Trajectory" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="oaV-gH-T96">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="94g-PB-HSa" customClass="HistoryTableView" customModule="Trajectory" customModuleProvider=
                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
...
            <point key="canvasLocation" x="8658" y="7728"/>
        </scene>
        <!--Find-->
        <scene sceneID="gDS-KB-K5V">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ou8-Cl-C2A" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Find" image="Find-48" selectedImage="Find-48" id="c6V-pK-Stf"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" translucent="NO" id="jtj-7E-QeU">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="barTintColor" white="0.059999999999999998" alpha="1" colorSpace="calibratedWhite"/>
                    </navigationBar>
...
                                    <action selector="setDateAndAcceptBtn:" destination="jxe-1C-Vc2" eventType="touchUpInside" id="lUd-dJ-rPl"/>
                                    <segue destination="arK-Dn-sLp" kind="unwind" unwindAction="unwindToOptionsWithSegue:" id="FRV-9h-RT3"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="edP-lt-TC9">
                                <rect key="frame" x="203.5" y="605" width="155.5" height="30"/>
                                <state key="normal" title="Cancel"/>
                                <connections>
                                    <action selector="cancelUpdate:" destination="jxe-1C-Vc2" eventType="touchUpInside" id="BIv-oy-43d"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
